[package]
name = "ferrite"
version = "0.2.0"
edition = "2021"

[lib]
name = "ferrite"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }
tree-sitter = "0.26.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.0"
tree-sitter-json = "0.24"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

